--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <button id="share">Copiar resultado</button>
+    <button id="share">Share</button>
     <script src="popup.js"></script>
   </body>
 </html>
